fix: better visible color

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -36,8 +36,8 @@ svg {
 	--accent: #000;
 	--accent-foreground: #fff;
 	--accent-hover: #1a1a1a;
-	--secondary: #c193eb;
-	--secondary-foreground: #000;
+	--secondary: #8228d7;
+	--secondary-foreground: #fff;
 	--code-block: #eef2f6;
 
 	--border-radius: 0.5rem;
